--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,12 +6,23 @@ default-run = "main"
 license = "MIT"
 release = false
 
+[lint]
+workspace = true
+
 [package.metadata.release]
 release = false
 
 [[bin]]
 name = "main"
 path = "src/bin/main.rs"
+
+[[bin]]
+name = "server"
+path = "src/bin/server.rs"
+
+[[bin]]
+name = "client"
+path = "src/bin/client.rs"
 
 [lib]
 name = "mbc"
