--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,15 +39,22 @@ anyhow = "*"
 hex = "0.4.3"
 once_cell = "1.5"
 log = "0.4"
+rand = "0.8"
 ring = "0.17.7"
-pretty_env_logger = "0.5.0"
 tracing = "0.1.37"
 futures = "*"
 futures-timer = "*"
-tracing-subscriber = {version="*", features = ["env-filter"]}
 
 [dependencies.serde]
 version = "1.0"
+features = ["derive"]
+
+[dependencies.tracing-subscriber]
+version = "*"
+features = ["env-filter"]
+
+[dependencies.clap]
+version = "4"
 features = ["derive"]
 
 [dependencies.libp2p]
@@ -65,15 +72,36 @@ features = [
     "ping",
     "websocket",
     "relay",
-    "mdns", "floodsub", "gossipsub", "identify", "tcp", "tls"]
+    "cbor",
+    "mdns", 
+    "floodsub", 
+    "gossipsub", 
+    "quic",
+    "serde",
+    "upnp",
+    "autonat",
+    "json",
+    "ed25519",
+    "metrics",
+    "plaintext",
+    "request-response",
+    "identify", 
+    "rendezvous",
+    "tcp", 
+    "tls"
+]
 
 [dependencies.tokio]
 version = "1.12.0"
-features = ["io-util", "io-std", "macros", 
+features = [
+    "io-util", 
+    "io-std", 
+    "macros", 
     "signal",
     "net",
-"rt", "sync", "time", "rt-multi-thread"]
-
-[dependencies.clap]
-version = "4"
-features = ["derive"]
+    "rt", 
+    "sync", 
+    "time", 
+    "rt-multi-thread",
+    "full",
+]
