--- a/Cargo.toml
+++ b/Cargo.toml
@@ -83,6 +83,8 @@ features = [
     "json",
     "ed25519",
     "metrics",
+    "uds",
+    "rsa",
     "plaintext",
     "request-response",
     "identify", 
