--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,9 +41,21 @@ once_cell = "1.5"
 log = "0.4"
 rand = "0.8"
 ring = "0.17.7"
-tracing = "0.1.37"
 futures = "*"
+either = "1.9"
 futures-timer = "*"
+clap_complete = "4"
+atty = "*"
+itertools = "0.12.0"
+tracing-log = {version = "0.1.2", features = ["std"]}
+derive_more = "*"
+
+[dependencies.tracing]
+version = "0.1.37"
+features = [
+    "max_level_trace",
+    "release_max_level_trace",
+]
 
 [dependencies.serde]
 version = "1.0"
@@ -51,11 +63,11 @@ features = ["derive"]
 
 [dependencies.tracing-subscriber]
 version = "*"
-features = ["env-filter"]
+features = ["json", "env-filter"]
 
 [dependencies.clap]
 version = "4"
-features = ["derive"]
+features = ["derive", "wrap_help", "env"]
 
 [dependencies.libp2p]
 version = "0.53.2"
