--- a/crates/mbc-core/Cargo.toml
+++ b/crates/mbc-core/Cargo.toml
@@ -9,3 +9,11 @@ name = "main"
 path = "src/bin/main.rs"
 
 [dependencies]
+
+[dependencies.serde]
+version = "*"
+features = ["derive"]
+
+[dependencies.uuid]
+features = ["v4"]
+version = "*"
